# top2000

./: .gitignore  .pylintrc  CHANGELOG.md  Differences.bas  LICENSE  README.md  eslint.config.js  fields.toml  fixes.toml  output.toml  package-lock.json  package.json  pyproject.toml  sonar-project.properties  top2000.py  tsconfig.json  validate_schema.sh  webpack.config.js
.github/workflows/: analysis.yml  publish.yml
doc/: app.nl.md
schema/: dump.json  fields.json  fixes.json  output.json  top2000.json
srv/: charts.js  data.js  external-manifest.js  format.js  index.html  index.js  info.js  locale.js  scroll.js  search.js  single-file.pug  style.scss
srv/modal/: index.js  search.js  upload.js
srv/tabs/: changelog.js  charts.js  index.js  info.js  table.js
top2000/: __init__.py  __main__.py  collision.py  compare.py  logging.py  normalization.py  output.py
top2000/output/: __init__.py  base.py  csv.py  json.py
top2000/readers/: __init__.py  base.py  csv.py  json.py  multi.py  wiki.py
types/: webpack-favicons.d.ts
